Création css, pages, contexts, routes mais les routes ne marchent pas

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "react/prop-types": 0,
     "no-console": "off",
     "no-restricted-syntax": [
       "error",
@@ -27,13 +28,12 @@
     ],
     "react/react-in-jsx-scope": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/no-unescaped-entities": "off",
-    "jsx-a11y/label-has-associated-control": [
-      "error",
-      {
-        "assert": "either"
-      }
-    ]
+    "react/jsx-no-constructed-context-values": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "no-plusplus": "off",
+    "radix": "off",
+    "react/no-unescaped-entities": 0
   },
   "settings": {
     "import/resolver": {
@@ -42,7 +42,8 @@
           "@assets": "./src/assets",
           "@components": "./src/components",
           "@pages": "./src/pages",
-          "@services": "./src/services"
+          "@services": "./src/services",
+          "@style": "./src/style"
         },
         "extensions": [".js", ".jsx"]
       }
