--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.7",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "joi": "^17.6.0",
+    "json-web-token": "^3.2.0",
+    "mysql2": "^2.3.3",
+    "uuid": "^8.3.2"
   },
   "rules": {
     "no-console": [
